# FlightSimulator

./: BinaryOperator.cpp  BinaryOperator.h  CMakeLists.txt  Command.h  CommandsMap.cpp  CommandsMap.h  ConditionCommand.cpp  ConditionCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  Expression.h  IfCommand.cpp  IfCommand.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  OpenClientCommand.cpp  OpenClientCommand.h  OpenServerCommand.cpp  OpenServerCommand.h  Parser.cpp  Parser.h  PrintCommand.cpp  PrintCommand.h  README.md  SleepCommand.cpp  SleepCommand.h  ThreadsManager.cpp  ThreadsManager.h  UnaryOperator.cpp  UnaryOperator.h  UpdateVarCommand.cpp  UpdateVarCommand.h  Value.cpp  Value.h  Var.cpp  Var.h  Variable.cpp  Variable.h  (+12 more)
